bynkc/tests/fixtures/positive/12_function_multi_params/input.bynk
commons demo {
  fn add3(a: Int, b: Int, c: Int) -> Int {
    a + b + c
  }
}
