bynkc/tests/fixtures/negative/14_chained_comparison/input.bynk
commons demo {
  fn chained(a: Int, b: Int, c: Int) -> Bool {
    a < b < c
  }
}
